# ServerFramework-1

./: CMakeLists.txt  ProjectTool.sh
002_CommLib/: AppThread.cpp  AppThread.hpp  AppThreadManager.cpp  AppThreadManager.hpp  BaseConfigManager.cpp  BaseConfigManager.hpp  CMakeLists.txt  CommDefine.h  DBConfigManager.cpp  DBConfigManager.h  ErrorNumDef.hpp  MaskWordConfig.cpp  MaskWordConfig.hpp  MsgHandler.cpp  MsgHandler.hpp  MsgHandlerSet.cpp  MsgHandlerSet.hpp  ProtocolEngine.hpp  ServerBusConfigManager.cpp  ServerBusConfigManager.h  ServerBusManager.cpp  ServerBusManager.h
101_ZoneServer/: CMakeLists.txt
101_ZoneServer/Chat/: ChatHandler.cpp  ChatHandler.hpp  ChatUtility.cpp  ChatUtility.h
101_ZoneServer/Exchange/: ExchangeHandler.cpp  ExchangeHandler.h  ExchangeManager.cpp  ExchangeManager.h
101_ZoneServer/FishGame/: FishAlgorithm.cpp  FishAlgorithm.h  FishUtility.cpp  FishUtility.h  FishpondHandler.cpp  FishpondHandler.h  FishpondManager.cpp  FishpondManager.h  FishpondObj.cpp  FishpondObj.h
101_ZoneServer/GM/: GMBaseCommand.cpp  GMBaseCommand.hpp  GMHorseLampCommand.cpp  GMHorseLampCommand.hpp  GMMailCommand.cpp  GMMailCommand.hpp  GMReposityCommand.cpp  GMReposityCommand.hpp  GMResourceCommand.cpp  GMResourceCommand.hpp  GameMasterHandler.cpp  GameMasterHandler.hpp
101_ZoneServer/Kernel/: AppDef.hpp  AppLauncher.cpp  AppLoop.cpp  AppLoop.hpp  AppTick.cpp  AppTick.hpp  ConfigManager.cpp  ConfigManager.hpp  FetchRoleWorldHandler.cpp  FetchRoleWorldHandler.hpp  GMPrivConfigManager.cpp  GMPrivConfigManager.hpp  GameEventManager.cpp  GameEventManager.hpp  GameObjCommDef.hpp  GameProtocolEngine.cpp  GameProtocolEngine.hpp  GameRole.cpp  GameRole.hpp  GameSession.cpp  GameSession.hpp  GameUnitID.cpp  GameUnitID.hpp  Handler.cpp  Handler.hpp  HandlerFactory.cpp  HandlerFactory.hpp  HandlerHelper.cpp  HandlerHelper.hpp  HandlerList.cpp  HandlerList.hpp  ModuleHelper.cpp  ModuleHelper.hpp  OnlineStatTick.cpp  OnlineStatTick.hpp  SessionManager.cpp  SessionManager.hpp  UnitUtility.cpp  UnitUtility.hpp  UpdateRoleInfoHandler.cpp  (+8 more)
101_ZoneServer/Login/: KickRoleWorldHandler.cpp  KickRoleWorldHandler.hpp  LoginHandler.cpp  LoginHandler.hpp  LogoutHandler.cpp  LogoutHandler.hpp
101_ZoneServer/Lottery/: LasvegasManager.cpp  LasvegasManager.h  LotteryHandler.cpp  LotteryHandler.h
101_ZoneServer/Mail/: MailHandler.cpp  MailHandler.h  MailManager.cpp  MailManager.h  MailUtility.cpp  MailUtility.h
101_ZoneServer/NewGuide/: NewGuideHandler.cpp  NewGuideHandler.h
101_ZoneServer/Quest/: QuestHandler.cpp  QuestHandler.h  QuestManager.cpp  QuestManager.h  QuestUtility.cpp  QuestUtility.h
101_ZoneServer/Rank/: RankInfoHandler.cpp  RankInfoHandler.h  RankInfoManager.cpp  RankInfoManager.h
101_ZoneServer/Recharge/: RechargeHandler.cpp  RechargeHandler.h  RechargeManager.cpp  RechargeManager.h  RechargeUtility.cpp  RechargeUtility.h
101_ZoneServer/RepThings/: RepThingsHandler.cpp  RepThingsHandler.hpp  RepThingsManager.cpp  RepThingsManager.hpp  RepThingsUtility.cpp  RepThingsUtility.hpp
101_ZoneServer/Resource/: ResourceUtility.cpp  ResourceUtility.h
101_ZoneServer/Reward/: RewardHandler.cpp  RewardHandler.h  RewardUtility.cpp  RewardUtility.h
101_ZoneServer/Vip/: VipPrivHandler.cpp  VipPrivHandler.h  VipUtility.cpp  VipUtility.h
108_WorldServer/: AppDefW.hpp  AppLoopW.cpp  AppLoopW.hpp  AppTick.cpp  AppTick.hpp  CMakeLists.txt  ChatHandler.cpp  ChatHandler.hpp  ConfigManager.cpp  ConfigManager.hpp  CreateRoleAccountHandler.cpp  CreateRoleAccountHandler.hpp  DeleteRoleAccountHandler.cpp  DeleteRoleAccountHandler.hpp  ExchangeWorldHandler.cpp  ExchangeWorldHandler.h  FetchRoleWorldHandler.cpp  FetchRoleWorldHandler.hpp  GameMasterHandler.cpp  GameMasterHandler.hpp  Handler.cpp  Handler.hpp  HandlerFactory.cpp  HandlerFactory.hpp  KickRoleWorldHandler.cpp  KickRoleWorldHandler.hpp  LasvegasWorldHandler.cpp  LasvegasWorldHandler.h  LimitLotteryWorldHandler.cpp  LimitLotteryWorldHandler.h  ListRoleAccountHandler.cpp  ListRoleAccountHandler.hpp  ListZoneHandler.cpp  ListZoneHandler.hpp  LogoutHandler.cpp  LogoutHandler.hpp  MailWorldHandler.cpp  MailWorldHandler.h  MainApp.cpp  ModuleHelper.cpp  (+39 more)
111_RoleDBServer/: AppDef.hpp  AppLauncher.cpp  ConfigManager.cpp  ConfigManager.hpp  RoleDBApp.cpp  RoleDBApp.hpp  RoleDBCreateRoleHandler.cpp  RoleDBCreateRoleHandler.hpp  RoleDBDeleteRoleHandler.cpp  RoleDBDeleteRoleHandler.hpp  RoleDBFetchRoleHandler.cpp  RoleDBFetchRoleHandler.hpp  RoleDBGMHandler.cpp  RoleDBGMHandler.hpp  RoleDBHandlerSet.cpp  RoleDBHandlerSet.hpp  RoleDBListRoleHandler.cpp  RoleDBListRoleHandler.hpp  RoleDBMailHandler.cpp  RoleDBMailHandler.hpp  RoleDBProtocolEngine.cpp  RoleDBProtocolEngine.hpp  RoleDBRechargeHandler.cpp  RoleDBRechargeHandler.hpp  (+4 more)
113_RegAuthServer/: AppLauncher.cpp  AuthAccountHandler.cpp  AuthAccountHandler.hpp  CMakeLists.txt  CacheTime.hpp  ClientClosedHandler.cpp  ClientClosedHandler.hpp  ConfigManager.cpp  ConfigManager.hpp  MainPlatformProxy.cpp  MainPlatformProxy.h  PlatformAuthHandler.cpp  PlatformAuthHandler.hpp  PlatformProxy.h  RegAuthApp.cpp  RegAuthApp.hpp  RegAuthDBAddHandler.cpp  RegAuthDBAddHandler.hpp  RegAuthDBFetchHandler.cpp  RegAuthDBFetchHandler.hpp  RegAuthHandlerSet.cpp  RegAuthHandlerSet.hpp  RegAuthMsgProcessor.cpp  RegAuthMsgProcessor.hpp  RegAuthOssLog.cpp  RegAuthOssLog.hpp  RegAuthProtocolEngine.cpp  RegAuthProtocolEngine.hpp  RegAuthPublic.hpp  RegisterAccountHandler.cpp  RegisterAccountHandler.hpp  SessionManager.cpp  SessionManager.hpp  SessionObj.cpp  SessionObj.hpp  YmnPlatformProxy.cpp  YmnPlatformProxy.h
113_RegAuthServer/libghttp/: http_req.c
116_ExchangeServer/: AppLauncher.cpp  CMakeLists.txt  CacheTime.cpp  ConfigManager.cpp  ConfigManager.hpp  ExchangeApp.cpp  ExchangeApp.hpp  ExchangeHandlerSet.cpp  ExchangeHandlerSet.hpp  ExchangeMsgProcessor.cpp  ExchangeMsgProcessor.hpp  ExchangeProtocolEngine.cpp  ExchangeProtocolEngine.hpp  ExchangePublic.hpp  GetCardNoHandler.cpp  GetCardNoHandler.hpp  OnlineExchangeHandler.cpp  OnlineExchangeHandler.hpp
116_ExchangeServer/libghttp/: ghttp.c
(+239 files in other folders)
